--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule "bundle/solarized"]
 	path = bundle/solarized
 	url = https://github.com/altercation/vim-colors-solarized.git
+[submodule "bundle/jsbeutify"]
+	path = bundle/jsbeutify
+	url = https://github.com/vim-scripts/jsbeautify.git
