--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,18 @@
 [submodule "bundle/jslint"]
 	path = bundle/jslint
 	url = https://github.com/hallettj/jslint.vim.git
+[submodule "bundle/javaScriptLint"]
+	path = bundle/javaScriptLint
+	url = https://github.com/joestelmach/javaScriptLint.vim.git
+[submodule "bundle/vim-web-indent"]
+	path = bundle/vim-web-indent
+	url = https://github.com/lukaszb/vim-web-indent.git
+[submodule "bundle/vim-javascript"]
+	path = bundle/vim-javascript
+	url = https://github.com/pangloss/vim-javascript.git
+[submodule "bundle/supertab"]
+	path = bundle/supertab
+	url = https://github.com/ervandew/supertab.git
+[submodule "bundle/vim-PairTools"]
+	path = bundle/vim-PairTools
+	url = https://github.com/MartinLafreniere/vim-PairTools.git
