--- a/.gitmodules
+++ b/.gitmodules
@@ -85,3 +85,6 @@
 [submodule "bundle/vim-PairTools"]
 	path = bundle/vim-PairTools
 	url = https://github.com/MartinLafreniere/vim-PairTools.git
+[submodule "bundle/VimRepress"]
+	path = bundle/VimRepress
+	url = https://github.com/vim-scripts/VimRepress.git
