--- a/.gitmodules
+++ b/.gitmodules
@@ -79,9 +79,6 @@
 [submodule "bundle/supertab"]
 	path = bundle/supertab
 	url = https://github.com/ervandew/supertab.git
-[submodule "bundle/vim-PairTools"]
-	path = bundle/vim-PairTools
-	url = https://github.com/MartinLafreniere/vim-PairTools.git
 [submodule "bundle/vim-autoclose"]
 	path = bundle/vim-autoclose
 	url = https://github.com/Townk/vim-autoclose.git
@@ -103,3 +100,12 @@
 [submodule "bundle/snipmate-snippets"]
 	path = bundle/snipmate-snippets
 	url = https://github.com/honza/snipmate-snippets.git
+[submodule "bundle/vim-yard"]
+	path = bundle/vim-yard
+	url = https://github.com/postmodern/vim-yard.git
+[submodule "bundle/vim-autopairs"]
+	path = bundle/vim-autopairs
+	url = https://github.com/jiangmiao/auto-pairs.git
+[submodule "bundle/vim-unimpaired"]
+	path = bundle/vim-unimpaired
+	url = https://github.com/tpope/vim-unimpaired
